syntax = "proto3";

package qa.grpc.rangiffler;

option java_multiple_files = true;
option java_package = "qa.grpc.rangiffler";
option java_outer_classname = "RangifflerProto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service CountryService {
  rpc GetCountries(google.protobuf.Empty) returns (AllCountries) {}
  rpc GetUserCountries(GetUserCountriesRequest) returns (AllCountries) {}
  rpc GetCountryByCode(GetCountryByCodeRequest) returns (Country) {}
}

message GetUserCountriesRequest{
  string name = 1;
}

message GetCountryByCodeRequest{
  string code = 1;
}

message AllCountries {
  repeated Country country = 1;
}

message Country {
  string id = 1;
  string code = 2;
  string name = 3;
  bytes flag = 4;
}